--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;700&display=swap" rel="stylesheet">
 
     <style>
+        /* 2. Global Variables */
         :root {
-            --bg-color: #121317; /* Deep Dark Grey */
-            --text-primary: #f7f7f7; /* Soft White */
-            --text-secondary: #a1a1a1; /* Muted Grey */
-            --accent-purple: #854efb; /* Extracted from Vyro SVG */
+            --bg-color: #121317;
+            --text-primary: #f7f7f7;
+            --text-secondary: #a1a1a1;
+            --accent-purple: #854efb;
             --accent-blue: #1370eb;
         }
 
@@ -31,15 +32,16 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            overflow: hidden; /* Prevent scroll for simple landing */
+            overflow: hidden;
         }
 
-        /* Navigation */
+        /* 3. Navigation */
         nav {
-            padding: 30px 50px;
+            padding: 30px 50px; /* Desktop Padding */
             display: flex;
             justify-content: space-between;
             align-items: center;
+            width: 100%;
         }
 
         .logo {
@@ -63,6 +65,7 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            white-space: nowrap; /* Prevents text from breaking */
         }
 
         .status-pill:hover {
@@ -73,12 +76,12 @@
         .dot {
             width: 8px;
             height: 8px;
-            background-color: #238636; /* GitHub Green */
+            background-color: #238636;
             border-radius: 50%;
             box-shadow: 0 0 8px #238636;
         }
 
-        /* Hero Section */
+        /* 4. Hero Section */
         main {
             flex: 1;
             display: flex;
@@ -88,11 +91,11 @@
             text-align: center;
             padding: 20px;
             position: relative;
+            z-index: 1;
         }
 
-        /* The Big Text */
         h1 {
-            font-size: clamp(3rem, 8vw, 6rem); /* Responsive sizing */
+            font-size: clamp(2.5rem, 8vw, 6rem);
             font-weight: 600;
             line-height: 1.1;
             letter-spacing: -0.04em;
@@ -100,7 +103,6 @@
             margin-bottom: 24px;
         }
 
-        /* The Gradient Text Effect */
         .gradient-text {
             background: linear-gradient(90deg, #9f86ff 0%, #68baff 100%);
             -webkit-background-clip: text;
@@ -109,14 +111,14 @@
         }
 
         p {
-            font-size: clamp(1.1rem, 2vw, 1.5rem);
+            font-size: clamp(1rem, 2vw, 1.5rem);
             color: var(--text-secondary);
             font-weight: 300;
             max-width: 600px;
             line-height: 1.6;
+            padding: 0 10px;
         }
 
-        /* Background Glow (Subtle) */
         .glow {
             position: absolute;
             width: 600px;
@@ -129,12 +131,32 @@
             pointer-events: none;
         }
 
-        /* Footer */
         footer {
             padding: 20px;
             text-align: center;
             font-size: 12px;
             color: #444;
+        }
+
+        /* --- MOBILE FIXES --- */
+        @media (max-width: 768px) {
+            nav {
+                padding: 20px 24px; /* Reduced padding for mobile */
+            }
+            
+            .status-pill {
+                padding: 8px 16px; /* Smaller button */
+                font-size: 12px;   /* Smaller text */
+            }
+
+            .logo {
+                font-size: 20px;
+            }
+            
+            .glow {
+                width: 300px;
+                height: 300px;
+            }
         }
     </style>
 </head>
