feat: Update header title to reflect current status and remove footer comment

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
                     <h1 class="header-name">
                         <a href="/">Huzaifa</a>
                     </h1>
-                    <h2 class="header-title">DevOps & Backend Engineer</h2>
+                    <h2 class="header-title">Software Engineering Student</h2>
                     <p class="header-description">
                         I turn "it works on my machine" into "it works in production."
                     </p>
@@ -376,7 +376,6 @@
             <!-- Footer -->
             <footer class="footer">
                 <p>
-                    UI hugely inspired by brittanychiang.com</a>.
                     Deployed via Travis CI & Docker on DigitalOcean.
                 </p>
             </footer>
