feat: add Leadership section to showcase leadership experience

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -61,6 +61,12 @@
                                     <span class="nav-text">Projects</span>
                                 </a>
                             </li>
+                            <li>
+                                <a href="#leadership" class="nav-link">
+                                    <span class="nav-indicator"></span>
+                                    <span class="nav-text">Leadership</span>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -413,6 +419,54 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+            </section>
+
+            <!-- Leadership Section -->
+            <section id="leadership" class="section" aria-label="Leadership Experience">
+                <div class="section-header-mobile">
+                    <h2 class="section-title-mobile">Leadership Experience</h2>
+                </div>
+                <div class="section-content">
+                    <ol class="experience-list">
+                        <li class="experience-item">
+                            <div class="experience-card">
+                                <header class="experience-header">
+                                    Sep 2023 — Present
+                                </header>
+                                <div class="experience-content">
+                                    <h3 class="experience-title">
+                                        <a href="#leadership" class="experience-link">
+                                            <span class="link-overlay"></span>
+                                            <span>
+                                                Student Body Co-Lead ·
+                                                <span class="company-name">
+                                                    ILC CS COMSATS
+                                                    <svg viewBox="0 0 20 20" fill="currentColor" class="link-arrow">
+                                                        <path fill-rule="evenodd"
+                                                            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z"
+                                                            clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </span>
+                                            </span>
+                                        </a>
+                                    </h3>
+                                    <p class="experience-description">
+                                        Advanced through four distinct leadership tiers over two years: Content Co-Lead, Content Lead, Co-Managing Director, and currently Student Body Co-Lead. 
+                                        Now managing a hierarchy of 200+ members across technical and operational teams to execute large-scale seminars, job recruitment drives, and semestrly Projects and Career Expo. 
+                                        Previously streamlined communication workflows and event logistics while acting as the primary liaison between faculty administration and the student body.
+                                    </p>
+                                    <ul class="tech-stack">
+                                        <li><span class="tech-tag">Leadership</span></li>
+                                        <li><span class="tech-tag">Team Management</span></li>
+                                        <li><span class="tech-tag">Event Planning</span></li>
+                                        <li><span class="tech-tag">SOP Implementation</span></li>
+                                        <li><span class="tech-tag">Public Speaking</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ol>
                 </div>
             </section>
 
