feat: add Open Source section to highlight contributions

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -56,6 +56,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="#opensource" class="nav-link">
+                                    <span class="nav-indicator"></span>
+                                    <span class="nav-text">Open Source</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a href="#projects" class="nav-link">
                                     <span class="nav-indicator"></span>
                                     <span class="nav-text">Projects</span>
@@ -266,6 +272,51 @@
                                         <li><span class="tech-tag">Data Processing</span></li>
                                         <li><span class="tech-tag">Client-Server Architecture</span></li>
                                         <li><span class="tech-tag">Network Infrastructure</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+                    </ol>
+                </div>
+            </section>
+
+            <!-- Open Source Section -->
+            <section id="opensource" class="section" aria-label="Open source contributions">
+                <div class="section-header-mobile">
+                    <h2 class="section-title-mobile">Open Source</h2>
+                </div>
+                <div class="section-content">
+                    <ol class="experience-list">
+                        <li class="experience-item">
+                            <div class="experience-card">
+                                <header class="experience-header">
+                                    Jan 2026 — Present
+                                </header>
+                                <div class="experience-content">
+                                    <h3 class="experience-title">
+                                        <a href="https://github.com/lichess-org/mobile" target="_blank"
+                                            rel="noopener noreferrer" class="experience-link">
+                                            <span class="link-overlay"></span>
+                                            <span>
+                                                Open Source Contributor ·
+                                                <span class="company-name">
+                                                    Lichess Mobile
+                                                    <svg viewBox="0 0 20 20" fill="currentColor" class="link-arrow">
+                                                        <path fill-rule="evenodd"
+                                                            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z"
+                                                            clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </span>
+                                            </span>
+                                        </a>
+                                    </h3>
+                                    <p class="experience-description">
+                                        Contributing to the official mobile application (Flutter/Dart) serving millions of active users.
+                                    </p>
+                                    <ul class="tech-stack">
+                                        <li><span class="tech-tag">Flutter</span></li>
+                                        <li><span class="tech-tag">Dart</span></li>
+                                        <li><span class="tech-tag">Mobile Development</span></li>
                                     </ul>
                                 </div>
                             </div>
