--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -29,8 +29,7 @@
     <!-- Floating Sidebar Toggle -->
     <button class="sidebar-toggle-btn" aria-label="Toggle sidebar" title="Toggle sidebar">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" class="toggle-icon">
-            <rect x="3" y="3" width="18" height="18" rx="2" />
-            <line x1="9" y1="3" x2="9" y2="21" />
+            <polyline points="15 18 9 12 15 6"></polyline>
         </svg>
     </button>
 
@@ -60,30 +59,59 @@
                             <li>
                                 <a href="#about" class="nav-link active">
                                     <span class="nav-indicator"></span>
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                        class="nav-icon hidden">
+                                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                        <circle cx="12" cy="7" r="4"></circle>
+                                    </svg>
                                     <span class="nav-text">About</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#experience" class="nav-link">
                                     <span class="nav-indicator"></span>
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                        class="nav-icon hidden">
+                                        <rect x="2" y="7" width="20" height="14" rx="2" ry="2"></rect>
+                                        <path d="M16 21V5a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                    </svg>
                                     <span class="nav-text">Experience</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#opensource" class="nav-link">
                                     <span class="nav-indicator"></span>
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                        class="nav-icon hidden">
+                                        <line x1="6" y1="3" x2="6" y2="15"></line>
+                                        <circle cx="18" cy="6" r="3"></circle>
+                                        <circle cx="6" cy="18" r="3"></circle>
+                                        <path d="M18 9a9 9 0 0 1-9 9"></path>
+                                    </svg>
                                     <span class="nav-text">Open Source</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#projects" class="nav-link">
                                     <span class="nav-indicator"></span>
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                        class="nav-icon hidden">
+                                        <polyline points="16 18 22 12 16 6"></polyline>
+                                        <polyline points="8 6 2 12 8 18"></polyline>
+                                    </svg>
                                     <span class="nav-text">Projects</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#leadership" class="nav-link">
                                     <span class="nav-indicator"></span>
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                        class="nav-icon hidden">
+                                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                                        <circle cx="9" cy="7" r="4"></circle>
+                                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                                    </svg>
                                     <span class="nav-text">Leadership</span>
                                 </a>
                             </li>
@@ -311,8 +339,8 @@
                                 </header>
                                 <div class="experience-content">
                                     <h3 class="experience-title">
-                                        <a href="https://github.com/lichess-org/mobile/pulls?q=is%3Apr+is%3Amerged+author%3ASeptic-H" target="_blank"
-                                            rel="noopener noreferrer" class="experience-link">
+                                        <a href="https://github.com/lichess-org/mobile/pulls?q=is%3Apr+is%3Amerged+author%3ASeptic-H"
+                                            target="_blank" rel="noopener noreferrer" class="experience-link">
                                             <span class="link-overlay"></span>
                                             <span>
                                                 Open Source Contributor ·
@@ -328,7 +356,8 @@
                                         </a>
                                     </h3>
                                     <p class="experience-description">
-                                        Contributing to the official mobile application (Flutter/Dart) serving millions of active users.
+                                        Contributing to the official mobile application (Flutter/Dart) serving millions
+                                        of active users.
                                     </p>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Flutter</span></li>
@@ -511,7 +540,8 @@
                                             <span>
                                                 Student Body Co-Lead ·
                                                 <span class="company-name">
-                                                    Industrial Liaison Cell Computer Science, COMSATS University Islamabad
+                                                    Industrial Liaison Cell Computer Science, COMSATS University
+                                                    Islamabad
                                                     <svg viewBox="0 0 20 20" fill="currentColor" class="link-arrow">
                                                         <path fill-rule="evenodd"
                                                             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z"
@@ -522,9 +552,13 @@
                                         </a>
                                     </h3>
                                     <p class="experience-description">
-                                        Advanced through four distinct leadership tiers over two years: Content Co-Lead, Content Lead, Co-Managing Director, and currently Student Body Co-Lead. 
-                                        Now managing a hierarchy of 200+ members across technical and operational teams to execute large-scale seminars, job recruitment drives, and semestrly Projects and Career Expo. 
-                                        Previously streamlined communication workflows and event logistics while acting as the primary liaison between faculty administration and the student body.
+                                        Advanced through four distinct leadership tiers over two years: Content Co-Lead,
+                                        Content Lead, Co-Managing Director, and currently Student Body Co-Lead.
+                                        Now managing a hierarchy of 200+ members across technical and operational teams
+                                        to execute large-scale seminars, job recruitment drives, and semestrly Projects
+                                        and Career Expo.
+                                        Previously streamlined communication workflows and event logistics while acting
+                                        as the primary liaison between faculty administration and the student body.
                                     </p>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Leadership</span></li>
