style: Update border-radius for terminal header and simplify leadership section title

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -523,7 +523,7 @@
             <!-- Leadership Section -->
             <section id="leadership" class="section" aria-label="Leadership Experience">
                 <div class="section-header-mobile" role="button" tabindex="0" aria-expanded="true">
-                    <h2 class="section-title-mobile">Leadership Experience</h2>
+                    <h2 class="section-title-mobile">Leadership</h2>
                     <span class="collapse-indicator">−</span>
                 </div>
                 <div class="section-content">
