feat: Update project description and tech stack to reflect Infrastructure as Code practices

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -397,20 +397,23 @@
                                         </a>
                                     </h3>
                                     <p class="project-description">
-                                        Designed as a production-grade Microservices Architecture
-                                        featuring independent Frontend (Nginx) and Backend (Node.js) containers.
-                                        Orchestrated via Docker Compose and secured behind a host-level Nginx
-                                        Reverse Proxy.
-                                        Includes an automated GitOps pipeline with Travis CI and air-gapped
+                                        Designed as a production-grade Microservices Architecture managed via
+                                        Infrastructure as Code (IaC)
+                                        with decoupled Frontend and Backend containers. Orchestrated via Docker Compose
+                                        and secured behind
+                                        a hardened Nginx Reverse Proxy. Includes an automated GitOps pipeline with
+                                        Travis CI and air-gapped
                                         observability via Prometheus & Grafana.
                                     </p>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Microservices</span></li>
+                                        <li><span class="tech-tag">Infrastructure as Code</span></li>
                                         <li><span class="tech-tag">Docker Compose</span></li>
                                         <li><span class="tech-tag">Nginx</span></li>
                                         <li><span class="tech-tag">Travis CI</span></li>
                                         <li><span class="tech-tag">Grafana</span></li>
                                         <li><span class="tech-tag">Prometheus</span></li>
+                                        <li><span class="tech-tag">Node.js</span></li>
                                     </ul>
                                 </div>
                             </div>
