--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -339,6 +339,45 @@
                                 </header>
                                 <div class="experience-content">
                                     <h3 class="experience-title">
+                                        <a href="https://github.com/localstack/localstack/pulls?q=is%3Apr+is%3Amerged+author%3ASeptic-H"
+                                            target="_blank" rel="noopener noreferrer" class="experience-link">
+                                            <span class="link-overlay"></span>
+                                            <span>
+                                                Open Source Contributor ·
+                                                <span class="company-name">
+                                                    LocalStack
+                                                    <svg viewBox="0 0 20 20" fill="currentColor" class="link-arrow">
+                                                        <path fill-rule="evenodd"
+                                                            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z"
+                                                            clip-rule="evenodd"></path>
+                                                    </svg>
+                                                </span>
+                                            </span>
+                                        </a>
+                                    </h3>
+                                    <p class="experience-description">
+                                        Contributing to the core open-source platform, resolving issues across the
+                                        codebase to improve functionality, stability, and documentation for the local
+                                        cloud development community.
+                                    </p>
+                                    <ul class="tech-stack">
+                                        <li><span class="tech-tag">Docker</span></li>
+                                        <li><span class="tech-tag">AWS</span></li>
+                                        <li><span class="tech-tag">DecOps</span></li>
+                                        <li><span class="tech-tag">Cloud</span></li>
+                                        <li><span class="tech-tag">Python</span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="experience-item">
+                            <div class="experience-card">
+                                <header class="experience-header">
+                                    Jan 2026 — Present
+                                </header>
+                                <div class="experience-content">
+                                    <h3 class="experience-title">
                                         <a href="https://github.com/lichess-org/mobile/pulls?q=is%3Apr+is%3Amerged+author%3ASeptic-H"
                                             target="_blank" rel="noopener noreferrer" class="experience-link">
                                             <span class="link-overlay"></span>
