fix: Correct spelling of "DecOps" to "DevOps" in tech stack

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -365,7 +365,7 @@
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Docker</span></li>
                                         <li><span class="tech-tag">AWS</span></li>
-                                        <li><span class="tech-tag">DecOps</span></li>
+                                        <li><span class="tech-tag">DevOps</span></li>
                                         <li><span class="tech-tag">Cloud</span></li>
                                         <li><span class="tech-tag">Python</span></li>
                                     </ul>
