fix: Update experience description for Socials Board

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -219,12 +219,13 @@
                                         </a>
                                     </h3>
                                     <p class="experience-description">
-                                        Engineered the back-end architecture for Socials Board, an AI-powered media
-                                        management tool, using NestJS and GraphQL. Optimized MongoDB aggregation
-                                        pipelines and API resolvers to reduce latency for analytics data retrieval.
-                                        Managed third-party social media API integrations with strict TypeScript typing
-                                        and developed modular services to decouple AI content generation for improved
-                                        scalability.
+                                        Supported the maintenance of NestJS and GraphQL codebase for Socials Board,
+                                        writing
+                                        efficient resolvers and ensuring data consistency with MongoDB. Collaborated
+                                        with the frontend team to troubleshoot cross-stack bugs, including fixing
+                                        critical asset rendering issues in transactional emails and resolving API
+                                        integration
+                                        conflicts during the launch phase.
                                     </p>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">NestJS</span></li>
