fix: Improve formatting and readability of contribution details in index.html

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -365,12 +365,15 @@
                                     </p>
                                     <ul class="contribution-details">
                                         <li>
-                                            <strong>EC2 & Terraform:</strong> Implemented the association.association-id filter for
-                                            DescribeNetworkAcls. Intercepted upstream Moto requests to fix 501 Not Implemented
+                                            <strong>EC2 & Terraform:</strong> Implemented the association.association-id
+                                            filter for
+                                            DescribeNetworkAcls. Intercepted upstream Moto requests to fix 501 Not
+                                            Implemented
                                             errors and prevent crashes in Terraform workflows.
                                         </li>
                                         <li>
-                                            <strong>Documentation:</strong> Fixed broken relative pathing in CONTRIBUTING.md, resolving 404 errors
+                                            <strong>Documentation:</strong> Fixed broken relative pathing in
+                                            CONTRIBUTING.md, resolving 404 errors
                                             for internal documentation links.
                                         </li>
                                     </ul>
@@ -415,11 +418,13 @@
                                     </p>
                                     <ul class="contribution-details">
                                         <li>
-                                            <strong>Accessibility:</strong> Implemented MergeSemantics on the welcome screen to fix TalkBack
+                                            <strong>Accessibility:</strong> Implemented MergeSemantics on the welcome
+                                            screen to fix TalkBack
                                             skipping text spans for visually impaired users.
                                         </li>
                                         <li>
-                                            <strong>Logic Refactoring:</strong> Decoupled navigation state from game-pause logic to enable "Back to
+                                            <strong>Logic Refactoring:</strong> Decoupled navigation state from
+                                            game-pause logic to enable "Back to
                                             Tournament" functionality during live matches.
                                         </li>
                                     </ul>
