fix: Update experience description and title for Industrial Coordinator role

--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -610,7 +610,7 @@
                                         <a href="#leadership" class="experience-link">
                                             <span class="link-overlay"></span>
                                             <span>
-                                                Student Body Co-Lead ·
+                                                Industrial Coordinator ·
                                                 <span class="company-name">
                                                     Industrial Liaison Cell Computer Science, COMSATS University
                                                     Islamabad
@@ -624,13 +624,13 @@
                                         </a>
                                     </h3>
                                     <p class="experience-description">
-                                        Advanced through four distinct leadership tiers over two years: Content Co-Lead,
-                                        Content Lead, Co-Managing Director, and currently Student Body Co-Lead.
-                                        Now managing a hierarchy of 200+ members across technical and operational teams
-                                        to execute large-scale seminars, job recruitment drives, and semestrly Projects
-                                        and Career Expo.
-                                        Previously streamlined communication workflows and event logistics while acting
-                                        as the primary liaison between faculty administration and the student body.
+                                        Advanced through five distinct leadership tiers over two years: Content Co-Lead,
+                                        Content Lead,
+                                        Co-Managing Director, Student Body Co-Lead, and currently Industrial
+                                        Coordinator, bridging
+                                        academia and industry by managing career expos, recruitment drives, and skill
+                                        development
+                                        sessions while mentoring a community of 300+ Computer Science students.
                                     </p>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Leadership</span></li>
