--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -361,22 +361,16 @@
                                     <p class="experience-description">
                                         Contributing to the core open-source platform, resolving issues across the
                                         codebase to improve functionality, stability, and documentation for the local
-                                        cloud development community.
+                                        cloud development community. <br><br>
+                                        <strong>EC2 & Terraform:</strong> Implemented the association.association-id
+                                        filter for
+                                        DescribeNetworkAcls. Intercepted upstream Moto requests to fix 501 Not
+                                        Implemented
+                                        errors and prevent crashes in Terraform workflows. <br>
+                                        <strong>Documentation:</strong> Fixed broken relative pathing in
+                                        CONTRIBUTING.md, resolving 404 errors
+                                        for internal documentation links.
                                     </p>
-                                    <ul class="contribution-details">
-                                        <li>
-                                            <strong>EC2 & Terraform:</strong> Implemented the association.association-id
-                                            filter for
-                                            DescribeNetworkAcls. Intercepted upstream Moto requests to fix 501 Not
-                                            Implemented
-                                            errors and prevent crashes in Terraform workflows.
-                                        </li>
-                                        <li>
-                                            <strong>Documentation:</strong> Fixed broken relative pathing in
-                                            CONTRIBUTING.md, resolving 404 errors
-                                            for internal documentation links.
-                                        </li>
-                                    </ul>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Docker</span></li>
                                         <li><span class="tech-tag">AWS</span></li>
@@ -414,20 +408,14 @@
                                     </h3>
                                     <p class="experience-description">
                                         Contributing to the official mobile application (Flutter/Dart) serving millions
-                                        of active users.
+                                        of active users. <br><br>
+                                        <strong>Accessibility:</strong> Implemented MergeSemantics on the welcome
+                                        screen to fix TalkBack
+                                        skipping text spans for visually impaired users. <br>
+                                        <strong>Logic Refactoring:</strong> Decoupled navigation state from
+                                        game-pause logic to enable "Back to
+                                        Tournament" functionality during live matches.
                                     </p>
-                                    <ul class="contribution-details">
-                                        <li>
-                                            <strong>Accessibility:</strong> Implemented MergeSemantics on the welcome
-                                            screen to fix TalkBack
-                                            skipping text spans for visually impaired users.
-                                        </li>
-                                        <li>
-                                            <strong>Logic Refactoring:</strong> Decoupled navigation state from
-                                            game-pause logic to enable "Back to
-                                            Tournament" functionality during live matches.
-                                        </li>
-                                    </ul>
                                     <ul class="tech-stack">
                                         <li><span class="tech-tag">Flutter</span></li>
                                         <li><span class="tech-tag">Dart</span></li>
